fix products to portfolio align menu and header

--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -136,26 +136,6 @@ $size-4: 1.5rem !default
   .navbar-menu {
     margin-left: 1rem;
   }
-
-  .sec-menu {
-    position: absolute;
-
-    top: 12.5rem;
-
-    left: 1.5rem;
-
-    .menu-label {
-      font-size: larger;
-      color: black;
-    }
-
-    .menu-label:not(:last-child) {
-      margin: 0;
-    }
-    .menu-list a {
-      padding: 0.1em 0;
-    }
-  }
 }
 
 html, body {
@@ -241,5 +221,40 @@ footer, .push {
 
 .sec-menu {
   z-index: 1000;
+  display: none;
+  @media (min-width: $desktop) {
+    display: block;
+    position: absolute;
+
+    top: 5rem;
+
+    left: -2rem;
+
+    .menu-label {
+      font-size: larger;
+      color: black;
+    }
+
+    .menu-label:not(:last-child) {
+      margin: 0;
+    }
+    .menu-list a {
+      padding: 0.1em 0;
+    }
+  }
+}
+
+.column.is-10.is-offset-1>.section {
+
+  padding: 3.4rem 1.5rem;
+  @media (max-width: 1600px) {
+    padding: 1.5rem;
+  }
+}
+
+.page-content.column {
+  @media (min-width: $desktop) {
+    margin-left: 7rem;
+  }
 }
 
